--- a/vue源码/迷你观察者.md
+++ b/vue源码/迷你观察者.md
@@ -6,3 +6,70 @@ Combine the previous two functions, renaming `convert()` to `observe()` and keep
 - `autorun()` takes an update function and re-runs it when properties that the update function subscribes to have been mutated. An update function is said to be "subscribing" to a property if it relies on that property during its evluation.
 
 They should support the following usage:
+```js
+const state = {
+  count: 0
+}
+observe(state)
+autorun(() => {
+  console.log(state.count)
+})
+
+state.count++
+```
+
+```js
+function convert(obj, dep) {
+  Object.keys(obj).forEach(key => {
+    let innerValue = obj[key]
+    Object.defineProperty(obj, key, {
+      get() {
+        dep.depend()
+        return innerValue
+      },
+      set(newValue) {
+        innerValue = newValue
+        dep.notify()
+      }
+    })
+  })
+}
+
+class Dep {
+  constructor() {
+    this.subscritor = new Set();
+  }
+
+  depend() {
+    if (updateWrapper) {
+      this.subscritor.add(updateWrapper);
+    }
+  }
+
+  notify() {
+    this.subscritor.forEach(sub => sub());
+  }
+}
+
+let updateWrapper
+function autorun(fn) {
+  updateWrapper = fn
+  fn()
+  updateWrapper = null;
+}
+
+function observe(obj) {
+  let dep = new Dep();
+  convert(obj, dep);
+}
+
+const state = {
+  count: 0
+}
+observe(state)
+autorun(() => {
+  console.log(state.count);
+})
+
+state.count++;
+```
