--- a/vue源码/迷你观察者.md
+++ b/vue源码/迷你观察者.md
@@ -19,7 +19,18 @@ state.count++
 ```
 
 ```js
-function convert(obj, dep) {
+function isObject (obj) {
+    return typeof obj === 'object'
+      && !Array.isArray(obj)
+      && obj !== null
+      && obj !== undefined
+}
+
+function observe (obj) {
+  if (!isObject(obj)) {
+    throw new TypeError()
+  }
+  let dep = new Dep();
   Object.keys(obj).forEach(key => {
     let innerValue = obj[key]
     Object.defineProperty(obj, key, {
@@ -59,8 +70,7 @@ function autorun(fn) {
 }
 
 function observe(obj) {
-  let dep = new Dep();
-  convert(obj, dep);
+  convert(obj);
 }
 
 const state = {
